--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@ngneat/hot-toast": "^4.1.0",
     "@ngneat/overview": "^3.0.0",
     "@ngneat/until-destroy": "^9.2.0",
+    "bcrypt-ts": "^5.0.2",
+    "crypto-js": "^4.2.0",
     "rxjs": "~7.5.0",
     "time-ago-pipe": "^1.3.2",
     "tslib": "^2.3.0",
@@ -33,6 +35,7 @@
     "@angular-devkit/build-angular": "~13.3.2",
     "@angular/cli": "~13.3.2",
     "@angular/compiler-cli": "~13.3.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
