--- a/angular.json
+++ b/angular.json
@@ -45,11 +45,11 @@
                 {
                   "type": "initial",
                   "maximumWarning": "500kb",
-                  "maximumError": "1.5mb"
+                  "maximumError": "1mb"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "1mb",
+                  "maximumWarning": "1.5kb",
                   "maximumError": "4kb"
                 }
               ],
