--- a/angular.json
+++ b/angular.json
@@ -44,13 +44,13 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "1.5mb",
+                  "maximumError": "1.5mb"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "1.5kb",
-                  "maximumError": "4kb"
+                  "maximumWarning": "2.5kb",
+                  "maximumError": "4.5kb"
                 }
               ],
               "fileReplacements": [
